Vending Machine/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Vending Machine
-d
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Vending Machine\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Vending Machine\VendingMachine.java
<---- end of javadoc command ---->
Loading source file \\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Vending Machine\VendingMachine.java...
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Vending Machine\VendingMachine.java:41: error: reached end of file while parsing
    }
     ^
1 error
